--- a/src/pages/en/tutorial/0-introduction/1.mdx
+++ b/src/pages/en/tutorial/0-introduction/1.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ~/layouts/TutorialLayout.astro
 title: About this Tutorial
-description: How to get started with the "Build your first Astro blog" tutorial.
+description: How to get started with the "Program in Practice" tutorial.
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
