--- a/src/pages/en/tutorial/0-introduction/index.mdx
+++ b/src/pages/en/tutorial/0-introduction/index.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ~/layouts/TutorialLayout.astro
 unitTitle: 'Welcome, world!'
-title: Build your first Astro Blog
+title: Program in Practice
 description: >-
   Learn the basics of Astro with a project-based tutorial. All the background
   knowledge you need to get started!
