--- a/src/pages/en/tutorial/1-setup/1.mdx
+++ b/src/pages/en/tutorial/1-setup/1.mdx
@@ -2,7 +2,7 @@
 layout: ~/layouts/TutorialLayout.astro
 title: Prepare your dev environment
 description: |-
-  Tutorial: Build your first Astro blog —
+  Tutorial: Program in Practice —
   Install the local tools that you’ll need to complete the tutorial
 ---
 import Badge from '~/components/Badge.astro';
