--- a/src/pages/en/getting-started.mdx
+++ b/src/pages/en/getting-started.mdx
@@ -8,7 +8,7 @@ import Button from '../../components/Button.astro'
 import Card from '../../components/Card.astro'
 import ContributorList from '../../components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
-
+import YouTubeEmbed from '../../components/YouTubeEmbed.astro';
 
 
 <h2>What is a Toolkit?</h2>
@@ -69,12 +69,17 @@ Check out our detailed [Why Astro](/en/concepts/why-astro/) breakdown to learn m
 
 Visit [astro.new](https://astro.new/) and choose from a variety of templates to get started. Play around with a full, working version of Astro right in your browser!
 
+
+<YouTubeEmbed videoId="ZmYm-4esDgA" />
+
+
+
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
   <Button href="https://astro.new/basics?on=stackblitz">Launch basic template</Button>
   <Button variant="outline" href="https://astro.new/">View all templates →</Button>
 </div>
 
-## Start your first project
+{/* ## Start your first project
 
 Get a new Astro project up and running locally with our helpful `create astro` CLI wizard!
 
@@ -99,7 +104,7 @@ Get a new Astro project up and running locally with our helpful `create astro` C
   </Fragment>
 </PackageManagerTabs>
 
-Our [Installation Guide](/en/install/auto/) has full, step-by-step instructions for installing Astro using our CLI wizard, creating a new project from an existing Astro GitHub repository, and for installing Astro manually.
+Our [Installation Guide](/en/install/auto/) has full, step-by-step instructions for installing Astro using our CLI wizard, creating a new project from an existing Astro GitHub repository, and for installing Astro manually. */}
 
 
 ## Learn Astro
@@ -126,7 +131,7 @@ See examples of some of the key concepts and patterns of an Astro site!
 *... see our [guide to using integrations](/en/guides/integrations-guide/)*.
 
 
-
+{/* 
 ## Join our Community
 
 Join us in the [Astro Discord](https://astro.build/chat/) to share with and get help from an active, friendly community!
@@ -136,7 +141,7 @@ Join us in the [Astro Discord](https://astro.build/chat/) to share with and get 
 💬 Ask our Support Squad a question in our `#support-threads` channel!
 
 💬 Share what you've been working on in our `#showcase` channel!
-
+ */}
 
 ## What's New?
 
