--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -23,46 +23,52 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
 
-<div class="block-wrapper" style="display:flex;
-    flex-wrap: wrap;
-    width:100%;
-    margin: 0 auto;">
+<div class="resource-card-container">
   
-  <ResourceCard
-  icon="clipboard"  
-  title="Troubleshooting Guide: Solutions for Common Issues" 
-  description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-  tags={['Tag1', 'Tag2', 'Tag3']} 
-  viewDetailsButtonText="View Details" 
-  shareButtonText="Share" 
-/>
+  	<ResourceCard
+		icon="akar-icons:clipboard"  
+		title="Troubleshooting Guide: Solutions for Common Issues" 
+		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
+		tags={['Tag1', 'Tag2', 'Tag3']} 
+		viewDetailsButtonText="View Details" 
+		shareButtonText="Share" 
+		width="half" 
+		resourceDetailsLink="/page-templates/resource-page-template/" 
 
-  <ResourceCard 
-  icon="globe" 
-  title="Online Support Provider Portal" 
-  description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-  tags={['Tag1', 'Tag2', 'Tag3']} 
-  viewDetailsButtonText="View Details" 
-  shareButtonText="Share" 
-/>
+	/>
 
-  <ResourceCard 
-  icon="graduation-cap" 
-  title="Product Training Module: Part 1" 
-  description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-  tags={['Tag1', 'Tag2', 'Tag3']} 
-  viewDetailsButtonText="View Details" 
-  shareButtonText="Share" 
-/>
+	<ResourceCard 
+		icon="ph:globe" 
+		title="Online Support Provider Portal" 
+		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
+		tags={['Tag1', 'Tag2', 'Tag3']} 
+		viewDetailsButtonText="View Details" 
+		shareButtonText="Share" 
+		 width="third" 
+		resourceDetailsLink="https://thegrovery.com" 
 
-  <ResourceCard 
-  icon="pills" 
-  title="Customer Success Stories: Inspire Trust and Confidence" 
-  description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-  tags={['Tag1', 'Tag2', 'Tag3']} 
-  viewDetailsButtonText="View Details" 
-  shareButtonText="Share" 
-/>
+	/>
+	
+	<ResourceCard 
+		icon="mdi:school-outline" 
+		title="Product Training Module: Part 1" 
+		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
+		tags={['Tag1', 'Tag2', 'Tag3']} 
+		viewDetailsButtonText="View Details" 
+		shareButtonText="Share" 
+		resourceDetailsLink="/page-templates/resource-page-template/" 
+	/>
+	
+	<ResourceCard 
+		icon="ph:pill-bold" 
+		title="Customer Success Stories: Inspire Trust and Confidence" 
+		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
+		tags={['Tag1', 'Tag2', 'Tag3']} 
+		viewDetailsButtonText="View Details" 
+		shareButtonText="Share" 
+		resourceDetailsLink="https://thegrovery.com" 
+	/>
+
         
 
 </div>
