--- a/src/content/docs/en/page-templates/directory-page-template.mdx
+++ b/src/content/docs/en/page-templates/directory-page-template.mdx
@@ -11,45 +11,50 @@ import ResourceCard from '~/components/ResourceCard.astro';
 
 Use this page template when you need to display a list of resources - they can either be other pages in the toolkit, or third-party resources hosted offsite.  Click "View Details" to navigate to the resource, or click "Share" to open a popup with a sharable link and a QR code
 
-<div class="block-wrapper" style="display:flex;
-    flex-wrap: wrap;
-    width:100%;
-    margin: 0 auto;">
+<div class="resource-card-container">
   
 	<ResourceCard
-		icon="clipboard"  
+		icon="akar-icons:clipboard"  
 		title="Troubleshooting Guide: Solutions for Common Issues" 
 		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
 		shareButtonText="Share" 
+		width="half" 
+		resourceDetailsLink="/page-templates/resource-page-template/" 
+
 	/>
 
 	<ResourceCard 
-		icon="globe" 
+		icon="ph:globe" 
 		title="Online Support Provider Portal" 
 		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
 		shareButtonText="Share" 
+		 width="third" 
+		resourceDetailsLink="https://thegrovery.com" 
+
 	/>
 	
 	<ResourceCard 
-		icon="graduation-cap" 
+		icon="mdi:school-outline" 
 		title="Product Training Module: Part 1" 
 		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
 		shareButtonText="Share" 
+		resourceDetailsLink="/page-templates/resource-page-template/" 
 	/>
 	
 	<ResourceCard 
-		icon="pills" 
+		icon="ph:pill-bold" 
 		title="Customer Success Stories: Inspire Trust and Confidence" 
 		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
 		shareButtonText="Share" 
+		resourceDetailsLink="https://thegrovery.com" 
 	/>
 
 
