adding width props to resource cards fixed gaps and responsiveness

--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -51,10 +51,10 @@ Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit ame
 	
 	<ResourceCard 
 		icon="mdi:school-outline" 
-		title="Product Training Module: Part 1" 
+		title="Product Training Module: Part One" 
 		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
 		tags={['Tag1', 'Tag2', 'Tag3']} 
-		viewDetailsButtonText="View Details" 
+		viewDetailsButtonText="View Resource" 
 		shareButtonText="Share" 
 		resourceDetailsLink="/page-templates/resource-page-template/" 
 	/>
@@ -62,6 +62,16 @@ Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit ame
 	<ResourceCard 
 		icon="ph:pill-bold" 
 		title="Customer Success Stories: Inspire Trust and Confidence" 
+		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
+		tags={['Tag1', 'Tag2', 'Tag3']} 
+		viewDetailsButtonText="View Details" 
+		shareButtonText="Share" 
+		resourceDetailsLink="https://thegrovery.com" 
+	/>
+
+	<ResourceCard 
+		icon="icomoon-free:price-tags" 
+		title="Pricing and Discount Strategies: Maximize Revenue" 
 		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
