--- a/src/content/docs/en/page-templates/directory-page-template.mdx
+++ b/src/content/docs/en/page-templates/directory-page-template.mdx
@@ -20,7 +20,7 @@ Use this page template when you need to display a list of resources - they can e
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
 		shareButtonText="Share" 
-		width="half" 
+		width="full" 
 		resourceDetailsLink="/page-templates/resource-page-template/" 
 
 	/>
@@ -32,14 +32,14 @@ Use this page template when you need to display a list of resources - they can e
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
 		shareButtonText="Share" 
-		 width="third" 
+		 width="half" 
 		resourceDetailsLink="https://thegrovery.com" 
 
 	/>
 	
 	<ResourceCard 
 		icon="mdi:school-outline" 
-		title="Product Training Module: Part 1" 
+		title="Product Training Module: Part One" 
 		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
@@ -50,6 +50,24 @@ Use this page template when you need to display a list of resources - they can e
 	<ResourceCard 
 		icon="ph:pill-bold" 
 		title="Customer Success Stories: Inspire Trust and Confidence" 
+		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
+		tags={['Tag1', 'Tag2', 'Tag3']} 
+		viewDetailsButtonText="View Details" 
+		shareButtonText="Share" 
+		resourceDetailsLink="https://thegrovery.com" 
+	/>
+	<ResourceCard 
+		icon="ps:chat" 
+		title="Best Practices for Effective Communication" 
+		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
+		tags={['Tag1', 'Tag2', 'Tag3']} 
+		viewDetailsButtonText="View Resource" 
+		shareButtonText="Share" 
+		resourceDetailsLink="https://thegrovery.com" 
+	/>
+	<ResourceCard 
+		icon="icomoon-free:price-tags" 
+		title="Pricing and Discount Strategies: Maximize Revenue" 
 		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
 		tags={['Tag1', 'Tag2', 'Tag3']} 
 		viewDetailsButtonText="View Details" 
