creating resource details component for the icon and resource info section

--- a/src/content/docs/en/page-templates/resource-page-template.mdx
+++ b/src/content/docs/en/page-templates/resource-page-template.mdx
@@ -8,8 +8,26 @@ import Button from '~/components/Button.astro'
 import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import PlaceholderContent from '~/components/PlaceholderContent.astro'
+import { Icon } from 'astro-icon'
+import ResourceDetails from '~/components/ResourceDetails.astro'
 
+<ResourceDetails 
+    author="Jane Smith" 
+    lastModified="02/02/2023" 
+    tags="Training" 
+    icon="akar-icons:clipboard"
+/>
+
+### Heading 3 Content
 Use iframes and our pre-made resource components.  Any service that gets commonly used can be set up with a premade component where we can plug in any config options.  
+#### Heading 2 Content
+Use iframes and our pre-made resource components.  Any service that gets commonly used can be set up with a premade component where we can plug in any config options.  
+* first point
+* second point
+* third point
+* top level bullet one
+  * sub-bullet  
+  * sub-bullet 2 
 
 <PlaceholderContent/>
 
