testing chatgpt integration needs to be server side so doing deploy preview test

--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -6,7 +6,8 @@ i18nReady: true
 import Button from '~/components/Button.astro'
 import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
-import ResourceCard from '~/components/ResourceCard.astro';
+import ResourceCard from '~/components/ResourceCard.astro'
+import ChatGPT from '~/components/ChatGPT.astro';
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
 
@@ -22,6 +23,11 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+
+## ChatGPT Test
+<div class="chat-container">
+<ChatGPT />
+</div>
 
 ## Resources
 <div class="resource-card-container">
