updated note icon in aside component to handle supporting documents on resource page, added related resources card area as well

--- a/src/content/docs/en/page-templates/resource-page-template.mdx
+++ b/src/content/docs/en/page-templates/resource-page-template.mdx
@@ -10,6 +10,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import PlaceholderContent from '~/components/PlaceholderContent.astro'
 import { Icon } from 'astro-icon'
 import ResourceDetails from '~/components/ResourceDetails.astro'
+import ResourceCard from '~/components/ResourceCard.astro'
 
 <ResourceDetails 
     author="Jane Smith" 
@@ -29,5 +30,41 @@ Use iframes and our pre-made resource components.  Any service that gets commonl
   * sub-bullet  
   * sub-bullet 2 
 
-<PlaceholderContent/>
+
+:::note[SUPPORTING DOCUMENTS]
+
+**[Supporting Document 1](https://astro.build/blog/astro-1/)**
+
+Description of supporting document one. Lorem ipsum dolar set amit. 
+
+**[Supporting Document 2](https://astro.build/blog/astro-2/)**
+
+Description of supporting document two. Lorem ipsum dolar set amit. 
+
+**[Supporting Document 3](https://astro.build/blog/astro-3/ "external")**
+
+Description of supporting document two. Lorem ipsum dolar set amit. 
+
+:::  
+
+## Related Resources
+
+<div class="resource-card-container">
+
+<ResourceCard 
+		icon="ph:globe" 
+		title="Online Support Provider Portal" 
+		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
+		tags={['Support', 'Training']} 
+		viewDetailsButtonText="View Details" 
+		shareButtonText="Share" 
+		 width="third" 
+		resourceDetailsLink="https://thegrovery.com" 
+
+	/>
+
+
+</div>
+
+{/* <PlaceholderContent/> */}
 
