updates to getting started pages and directory page cards to bring in closer, updated page titles on a couple pages

--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -7,6 +7,7 @@ import Button from '~/components/Button.astro'
 import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import ResourceCard from '~/components/ResourceCard.astro';
+import YouTubeEmbed from '~/components/YouTubeEmbed.astro';
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
 
@@ -23,104 +24,5 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
 
-## Resources
-<div class="resource-card-container">
-  
-  	<ResourceCard
-		icon="akar-icons:clipboard"  
-		title="Troubleshooting Guide: Solutions for Common Issues" 
-		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-		tags={['Tag1', 'Tag2', 'Tag3']} 
-		viewDetailsButtonText="View Details" 
-		shareButtonText="Share" 
-		width="half" 
-		resourceDetailsLink="/page-templates/resource-page-template/" 
-
-	/>
-
-	<ResourceCard 
-		icon="ph:globe" 
-		title="Online Support Provider Portal" 
-		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-		tags={['Tag1', 'Tag2', 'Tag3']} 
-		viewDetailsButtonText="View Details" 
-		shareButtonText="Share" 
-		 width="third" 
-		resourceDetailsLink="https://thegrovery.com" 
-
-	/>
-	
-	<ResourceCard 
-		icon="mdi:school-outline" 
-		title="Product Training Module: Part One" 
-		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-		tags={['Tag1', 'Tag2', 'Tag3']} 
-		viewDetailsButtonText="View Resource" 
-		shareButtonText="Share" 
-		resourceDetailsLink="/page-templates/resource-page-template/" 
-	/>
-	
-	<ResourceCard 
-		icon="ph:pill-bold" 
-		title="Customer Success Stories: Inspire Trust and Confidence" 
-		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-		tags={['Tag1', 'Tag2', 'Tag3']} 
-		viewDetailsButtonText="View Details" 
-		shareButtonText="Share" 
-		resourceDetailsLink="https://thegrovery.com" 
-	/>
-
-	<ResourceCard 
-		icon="icomoon-free:price-tags" 
-		title="Pricing and Discount Strategies: Maximize Revenue" 
-		description="Leaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas." 
-		tags={['Tag1', 'Tag2', 'Tag3']} 
-		viewDetailsButtonText="View Details" 
-		shareButtonText="Share" 
-		resourceDetailsLink="https://thegrovery.com" 
-	/>
-
-        
-
-</div>
-
-
-## Announcements
-
-Visit [astro.new](https://astro.new/) and choose from a variety of templates to get started. Play around with a full, working version of Astro right in your browser!
-
-<div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
-  <Button href="https://astro.new/basics?on=stackblitz">Launch basic template</Button>
-  <Button variant="outline" href="https://astro.new/">View all templates →</Button>
-</div>
-
-## What is a Brand Toolkit
-
-Get a new Astro project up and running locally with our helpful `create astro` CLI wizard!
-
-<PackageManagerTabs>
-  <Fragment slot="npm">
-  ```shell
-  # create a new project with npm
-  npm create astro@latest
-  ```
-  </Fragment>
-  <Fragment slot="pnpm">
-  ```shell
-  # create a new project with pnpm
-  pnpm create astro@latest
-  ```
-  </Fragment>
-  <Fragment slot="yarn">
-  ```shell
-  # create a new project with yarn
-  yarn create astro
-  ```
-  </Fragment>
-</PackageManagerTabs>
-
-Our [Installation Guide](/en/install/auto/) has full, step-by-step instructions for installing Astro using our CLI wizard, creating a new project from an existing Astro GitHub repository, and for installing Astro manually.
-
-
-
+<YouTubeEmbed videoId="ZmYm-4esDgA" />
 
