minor fixes to content, updated video on getting started

--- a/src/content/docs/en/brand-resources/product-training-module1.mdx
+++ b/src/content/docs/en/brand-resources/product-training-module1.mdx
@@ -1,5 +1,5 @@
 ---
-title: Product Training Module 1
+title: Product Training Module Part One
 description: UUse this page for things like embedded tools like forms and login portals
 i18nReady: true
 type: base
