--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -24,5 +24,5 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
 
-<YouTubeEmbed videoId="ZmYm-4esDgA" />
+<YouTubeEmbed videoId="3TbJfqwSy_I" />
 
