homepage content update

--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to use the Toolkit
+title: What is CORE RMS?
 description: A basic intro to Astro.
 i18nReady: true
 ---
@@ -9,20 +9,25 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import ResourceCard from '~/components/ResourceCard.astro';
 import YouTubeEmbed from '~/components/YouTubeEmbed.astro';
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-
 :::tip[ANNOUNCEMENTS]
 **What’s new in the Grovery’s V1 Toolkit** [Find out in the announcement blog post](https://astro.build/blog/astro-2/).  
 **Ready to for your own Toolkit?** [Take our quiz to find what features are right for you?](/en/guides/upgrade-to/v2/).
 :::
 
-## What is a brand toolkit?
+The Grovery’s CORE RMS (Resource Management System) is a software product that provides the framework to organize, manage and train Sales and Marketing teams. This Web App platform provides the environment for teams to work more efficiently, share information and provides easy access to relevant program materials.
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+## Features of CORE RMS include: 
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+* Teams gain efficiency through a scalable Progressive Web App platform.
+* The  Grovery’s CORE RMS manages communications integrity through system-wide informational updates that minimize the legal risks involved in document version control
+* Anytime digital access mitigates the high cost to manage print collateral and provides immediate and easy access to program materials
+* Communications are streamlined with the built-in feedback loop and in-app notifications ensure that the most relevant program information is front and center.
+* The integrated resources access feature allows Teams to send materials to customers directly from the app.
+* Utilize the built in knowledge base to deepen your team’s understanding of program components
+* Customize and simplify your user experience through the full-resource search functionality 
+* Understand how your team is utilizing The Grovery CORE RMS through an integrated analytics tool. 
+* All assets are  stored securely. Sensitive material can always be gated and password protected. 
 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
 
 <YouTubeEmbed videoId="3TbJfqwSy_I" />
 
