initial QR code component set up

--- a/src/content/docs/en/page-templates/pdf-page-template.mdx
+++ b/src/content/docs/en/page-templates/pdf-page-template.mdx
@@ -11,6 +11,4 @@ This is an example of a <strong>PDF Page Template</strong>.  Use this page templ
 
 <PdfFrame
 	link="/docs/Grovery-2.0-Brand-Guidelines.pdf"
->
-	
-</PdfFrame>
+></PdfFrame>
