--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -8,6 +8,7 @@ import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import ResourceCard from '~/components/ResourceCard.astro';
 import YouTubeEmbed from '~/components/YouTubeEmbed.astro';
+import NavBlock from '~/components/NavBlock.astro';
 
 :::tip[ANNOUNCEMENTS]
 **What’s new in the Grovery’s V1 Toolkit** [Find out in the announcement blog post](https://astro.build/blog/astro-2/).  
@@ -15,6 +16,42 @@ import YouTubeEmbed from '~/components/YouTubeEmbed.astro';
 :::
 
 The Grovery’s CORE RMS (Resource Management System) is a software product that provides the framework to organize, manage and train Sales and Marketing teams. This Web App platform provides the environment for teams to work more efficiently, share information and provides easy access to relevant program materials.
+
+## Quick Links
+
+<div class="nav-block-container">
+  
+	<NavBlock
+		icon="gala:brochure"  
+		title="Brand Resources" 
+		description="Check out our latest brand resources to get you started on your journey" 
+		
+		viewDetailsButtonText="Explore Resources" 
+		
+		width="half" 
+		resourceDetailsLink="/brand-resources/view-all" 
+
+	/>
+	<NavBlock
+		icon="ic:outline-quiz"  
+		title="Test Your Knowledge" 
+		description="Check out our multiple choice quiz component with progress tracker" 
+		
+		viewDetailsButtonText="Quiz Component" 
+	
+		width="half" 
+		resourceDetailsLink="page-templates/tutorial-page-template/1-step-1" 
+
+	/>
+	
+
+</div>
+
+
+## Watch Our Reel
+
+<YouTubeEmbed videoId="3TbJfqwSy_I" />
+
 
 ## Features of CORE RMS include: 
 
@@ -27,7 +64,3 @@ The Grovery’s CORE RMS (Resource Management System) is a software product that
 * Customize and simplify your user experience through the full-resource search functionality 
 * Understand how your team is utilizing The Grovery CORE RMS through an integrated analytics tool. 
 * All assets are  stored securely. Sensitive material can always be gated and password protected. 
-
-
-<YouTubeEmbed videoId="3TbJfqwSy_I" />
-
