Adding inline glossary to PWA terms on getting started page. I've added a json file for glossary terms to data folder

--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -9,13 +9,14 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import ResourceCard from '~/components/ResourceCard.astro';
 import YouTubeEmbed from '~/components/YouTubeEmbed.astro';
 import NavBlock from '~/components/NavBlock.astro';
+import InlineGlossary from '~/components/InlineGlossary.astro';
 
 :::tip[ANNOUNCEMENTS]
 **What’s new in the Grovery’s V1 Toolkit** [Find out in the announcement blog post](https://astro.build/blog/astro-2/).  
 **Ready to for your own Toolkit?** [Take our quiz to find what features are right for you?](/en/guides/upgrade-to/v2/).
 :::
 
-The Grovery’s CORE RMS (Resource Management System) is a software product that provides the framework to organize, manage and train Sales and Marketing teams. This Web App platform provides the environment for teams to work more efficiently, share information and provides easy access to relevant program materials.
+The Grovery’s CORE RMS (Resource Management System) is a software product that provides the framework to organize, manage and train Sales and Marketing teams. This <InlineGlossary text="Progressive Web App" />&nbsp;platform provides the environment for teams to work more efficiently, share information and provides easy access to relevant program materials.
 
 ## Quick Links
 
@@ -55,7 +56,7 @@ The Grovery’s CORE RMS (Resource Management System) is a software product that
 
 ## Features of CORE RMS include: 
 
-* Teams gain efficiency through a scalable Progressive Web App platform.
+* Teams gain efficiency through a scalable <InlineGlossary text="PWA" />.
 * The  Grovery’s CORE RMS manages communications integrity through system-wide informational updates that minimize the legal risks involved in document version control
 * Anytime digital access mitigates the high cost to manage print collateral and provides immediate and easy access to program materials
 * Communications are streamlined with the built-in feedback loop and in-app notifications ensure that the most relevant program information is front and center.
